# model_qwen2_vl_example

./: .gitignore  README.md  example.py  pyproject.toml  test.py
model_qwen2_vl_example/: models.py
python_wheels/: model_interface-0.1.0-py3-none-any.whl
